Add full migration history content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<h1>Chinese Migration to the U.S. (1880–1945)</h1>
+
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Chinese Migration to the U.S. (1880–1945)</title>
+    <style>
+        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 40px; }
+        h1 { color: darkred; }
+        h2 { margin-top: 30px; }
+        p { max-width: 700px; }
+    </style>
+</head>
+<body>
+    <h1>Chinese Migration to the U.S. (1880–1945)</h1>
+    <p>This page provides a decade-by-decade overview of Chinese migration to the United States, highlighting key events and legislation that shaped this migration.</p>
+<h2>1880s</h2>
+<p>In 1882, the U.S. Congress passed the Chinese Exclusion Act, suspending Chinese labor immigration. This marked the first significant restriction of free immigration in U.S. history.</p>
+<h2>1890s</h2>
+<p>Chinese immigrants faced violence and exclusion. Communities like San Francisco's Chinatown survived despite increasing restrictions.</p>
+<h2>1900s</h2>
+<p>The 1906 San Francisco earthquake led to destroyed birth records, enabling some Chinese immigrants to claim U.S. birth and bring 'paper sons'.</p>
+<h2>1910s</h2>
+<p>The Angel Island Immigration Station was opened in 1910 to enforce exclusion laws. Many Chinese immigrants were detained and interrogated there.</p>
+<h2>1920s</h2>
+<p>The Immigration Act of 1924 further restricted Asian immigration. Chinese communities remained mostly male due to bans on family reunification.</p>
+<h2>1930s</h2>
+<p>The Great Depression worsened discrimination. Few new Chinese migrants arrived, but second-generation Chinese Americans began organizing socially and politically.</p>
+<h2>1940s</h2>
+<p>In 1943, the Chinese Exclusion Act was repealed during WWII as China was a U.S. ally. However, immigration was still limited to 105 people per year until 1965.</p>
+
+</body>
+</html>
