Add table of Chinese population statistics

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         h1 { color: darkred; }
         h2 { margin-top: 30px; }
         p { max-width: 700px; }
+        table { border-collapse: collapse; margin-top: 20px; }
+        th, td { border: 1px solid #ccc; padding: 8px 12px; text-align: right; }
+        th { background-color: #f2f2f2; }
+        caption { caption-side: top; text-align: left; font-weight: bold; margin-bottom: 5px; }
     </style>
 </head>
 <body>
@@ -28,6 +32,23 @@
 <p>The Great Depression worsened discrimination. Few new Chinese migrants arrived, but second-generation Chinese Americans began organizing socially and politically.</p>
 <h2>1940s</h2>
 <p>In 1943, the Chinese Exclusion Act was repealed during WWII as China was a U.S. ally. However, immigration was still limited to 105 people per year until 1965.</p>
+
+<h2>Chinese Population in the U.S. (1860–1940)</h2>
+<table>
+    <caption>Source: Kung 1962: 33, 41</caption>
+    <tr>
+        <th>Year</th><th>Total</th><th>Men</th><th>Women</th><th>% Female</th><th>% Urban</th>
+    </tr>
+    <tr><td>1860</td><td>34,933</td><td>33,149</td><td>1,784</td><td>5.1</td><td>—</td></tr>
+    <tr><td>1870</td><td>63,199</td><td>58,633</td><td>4,566</td><td>7.2</td><td>—</td></tr>
+    <tr><td>1880</td><td>105,456</td><td>100,686</td><td>4,779</td><td>4.5</td><td>—</td></tr>
+    <tr><td>1890</td><td>107,488</td><td>103,620</td><td>3,868</td><td>3.6</td><td>—</td></tr>
+    <tr><td>1900</td><td>89,863</td><td>85,341</td><td>4,522</td><td>5.0</td><td>—</td></tr>
+    <tr><td>1910</td><td>71,531</td><td>66,856</td><td>4,675</td><td>6.5</td><td>75.9</td></tr>
+    <tr><td>1920</td><td>61,639</td><td>53,891</td><td>7,748</td><td>12.6</td><td>81.1</td></tr>
+    <tr><td>1930</td><td>74,954</td><td>59,802</td><td>15,152</td><td>20.2</td><td>87.7</td></tr>
+    <tr><td>1940</td><td>77,504</td><td>57,389</td><td>20,115</td><td>25.9</td><td>91.6</td></tr>
+</table>
 
 </body>
 </html>
