Add background image and improve readability

--- a/index.html
+++ b/index.html
@@ -5,19 +5,36 @@
     <meta charset="UTF-8">
     <title>Chinese Migration to the U.S. (1880–1945)</title>
     <style>
-        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 40px; }
-        h1 { color: darkred; }
-        h2 { margin-top: 30px; }
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            background-image: url('https://upload.wikimedia.org/wikipedia/commons/0/0f/Chinese_goldminers_in_California.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+            color: white;
+            text-shadow: 1px 1px 3px black;
+        }
+        .content {
+            background-color: rgba(0, 0, 0, 0.6);
+            padding: 40px;
+            border-radius: 10px;
+            margin: 40px;
+        }
+        h1 { color: #ffcc00; }
+        h2 { margin-top: 30px; color: #ffd700; }
         p { max-width: 700px; }
-        /* Table styles */
         div.table-wrapper { overflow-x: auto; margin-top: 20px; }
         table { border-collapse: collapse; width: 100%; min-width: 600px; }
-        th, td { border: 1px solid #ccc; padding: 8px 12px; text-align: right; }
-        th { background-color: #f2f2f2; }
-        caption { caption-side: top; text-align: left; font-weight: bold; margin-bottom: 5px; }
+        th, td { border: 1px solid #ccc; padding: 8px 12px; text-align: right; background-color: rgba(255,255,255,0.1); }
+        th { background-color: rgba(255,255,255,0.3); color: black; }
+        caption { caption-side: top; text-align: left; font-weight: bold; margin-bottom: 5px; color: #fff; }
     </style>
 </head>
 <body>
+<div class="content">
     <h1>Chinese Migration to the U.S. (1880–1945)</h1>
     <p>This page provides a decade-by-decade overview of Chinese migration to the United States, highlighting key events and legislation that shaped this migration.</p>
 <h2>1880s</h2>
@@ -53,6 +70,6 @@
     <tr><td>1940</td><td>77,504</td><td>57,389</td><td>20,115</td><td>25.9</td><td>91.6</td></tr>
 </table>
 </div>
-
+</div>
 </body>
 </html>
