Add hose team photo

--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
         h1 { color: #ffcc00; }
         h2 { margin-top: 30px; color: #ffd700; }
         p { max-width: 700px; }
+        img {
+            width: 100%;
+            max-width: 800px;
+            margin: 20px 0;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+        }
+        .caption {
+            font-size: 0.9em;
+            color: #ccc;
+            margin-bottom: 30px;
+        }
         div.table-wrapper { overflow-x: auto; margin-top: 20px; }
         table { border-collapse: collapse; width: 100%; min-width: 600px; }
         th, td { border: 1px solid #ccc; padding: 8px 12px; text-align: right; background-color: rgba(255,255,255,0.1); }
@@ -36,6 +48,8 @@
 <body>
 <div class="content">
     <h1>Chinese Migration to the U.S. (1880–1945)</h1>
+    <img src="hose-team.jpg" alt="Chinese Hose Team, 1888">
+    <p class="caption">📸 Chinese Hose Team, Deadwood, South Dakota, 1888. Source: Library of Congress.</p>
     <p>This page provides a decade-by-decade overview of Chinese migration to the United States, highlighting key events and legislation that shaped this migration.</p>
 <h2>1880s</h2>
 <p>In 1882, the U.S. Congress passed the Chinese Exclusion Act, suspending Chinese labor immigration. This marked the first significant restriction of free immigration in U.S. history.</p>
